# rootcause-opentelemetry

./: Cargo.toml
examples/: full_feature.rs  main.rs
src/: attachments.rs  builder.rs  event.rs  event_builder.rs  lib.rs  log_event.rs  main.rs  reports.rs  setup.rs  span.rs  span_event.rs  spec.rs  utilities.rs
src/zold/: attachments.rs  builder.rs  reports.rs  span.rs  spec.rs  utils.rs
