[package]
name = "rootcause-opentelemetry"
version = "0.1.0"
edition = "2024"

[features]
logs = ["opentelemetry/logs"]

[dependencies]
tokio.version = "1.48"
tokio.features = [ "rt", "rt-multi-thread", "time", "macros" ]
rootcause = "0.12"
rootcause-backtrace = "0.12"
opentelemetry.version = "0.31"
opentelemetry.features = [ "trace" ]
opentelemetry-semantic-conventions = "0.31"

[dev-dependencies]
opentelemetry_sdk.version = "0.31"
opentelemetry_sdk.features = [ "trace", "logs" ]
opentelemetry-stdout = "0.31"

[[example]]
name = "full_feature"
required-features = ["logs"]
